--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>404 Page not found  &middot; My New Hugo Site</title>
+  <title>404 Page not found  &middot; Ryoung.io</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
@@ -17,10 +17,10 @@
 <meta name="keywords" content="">
 
 
-<meta property="og:title" content="404 Page not found  &middot; My New Hugo Site ">
-<meta property="og:site_name" content="My New Hugo Site"/>
+<meta property="og:title" content="404 Page not found  &middot; Ryoung.io ">
+<meta property="og:site_name" content="Ryoung.io"/>
 <meta property="og:url" content="http://ryoung.io/404/" />
-<meta property="og:locale" content="en-us">
+<meta property="og:locale" content="en-EN">
 
 
 <meta property="og:type" content="website" />
@@ -44,17 +44,17 @@
 <link href='https://fonts.googleapis.com/css?family=Merriweather:300%7CRaleway%7COpen+Sans' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="http://ryoung.io/css/font-awesome.min.css">
 <link rel="stylesheet" href="http://ryoung.io/css/style.css">
-
+<link rel="stylesheet" href="http://ryoung.io/css/highlight/default.css">
 
   
 </head>
 <body>
-  <main id="main-wrapper" class="container main_wrapper">
+  <main id="main-wrapper" class="container main_wrapper has-sidebar">
     <header id="main-header" class="container main_header">
   <div class="container brand">
   <div class="container title h1-like">
-  <a class="baselink" href="http://ryoung.io/">
-  My New Hugo Site
+  <a class="baselink" href="http://ryoung.io">
+  foobar
 
 </a>
 
@@ -63,6 +63,8 @@
   
 <div class="container topline">
   
+  few words about your site
+
 
 </div>
 
@@ -72,6 +74,8 @@
   <nav class="container nav primary no-print">
   
 
+<a class="homelink" href="http://ryoung.io">Home</a>
+
 
   
 
@@ -79,6 +83,9 @@
 
 <div class="container nav secondary no-print">
   
+<a id="contact-link-email" class="contact_link" href="mailto:admin@ryoung.io">
+  <span class="fa fa-envelope-square"></span><span>email</span></a>
+
 
 
 
@@ -108,7 +115,7 @@
 <article id="main-content" class="container main_content error_404">
   <h1>404 Not Found</h1>
   <p>What you're looking for isn't here, sorry!</p>
-  <p><a href="http://ryoung.io/">&larr; Click here to go back home</a></p>
+  <p><a href="http://ryoung.io">&larr; Click here to go back home</a></p>
 </article>
 
       <footer id="main-footer" class="container main_footer">
@@ -125,11 +132,20 @@
   
 <div class="container footline">
   
+  code with <i class='fa fa-heart'></i>
+
 
 </div>
 
 
   
+<div class="container copyright">
+  
+  &copy; 2016 Ron Young.
+
+
+</div>
+
 
 </div>
 
@@ -139,7 +155,21 @@
     
 
 
+<script src="http://ryoung.io/js/highlight.pack.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
 
+
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'Your Google Analytics tracking code', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 
     
