--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
     <link rel="shortcut icon" href="http://ryoung.io/img/favicon.ico" type="image/x-icon">
     <link rel="canonical" href="http://ryoung.io/404/">
 
-    <title>404 Page not found | Academic Theme</title>
+    <title>404 Page not found | ryoung.io</title>
 
 </head>
 <body id="top">
@@ -39,7 +39,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="http://ryoung.io/">Academic Theme</a>
+            <a class="navbar-brand" href="http://ryoung.io/">ryoung.io</a>
         </div>
 
         
@@ -78,7 +78,7 @@
     <div class="container">
         <p class="powered-by">
 
-            &copy; 2016 Your Name &middot; 
+            &copy; 2016 Ron Young &middot; 
 
             Powered by the <a href="https://github.com/gcushen/hugo-academic" target="_blank">Academic theme</a> for <a href="http://gohugo.io" target="_blank">Hugo</a>.
 
