--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="shortcut icon" href="http://ryoung.io/img/favicon.ico" type="image/x-icon">
     <link rel="canonical" href="http://ryoung.io/">
 
-    <title>Academic Theme</title>
+    <title>ryoung.io</title>
 
 </head>
 <body id="top">
@@ -39,7 +39,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="http://ryoung.io/">Academic Theme</a>
+            <a class="navbar-brand" href="http://ryoung.io/">ryoung.io</a>
         </div>
 
         
@@ -298,7 +298,7 @@
     <div class="container">
         <p class="powered-by">
 
-            &copy; 2016 Your Name &middot; 
+            &copy; 2016 Ron Young &middot; 
 
             Powered by the <a href="https://github.com/gcushen/hugo-academic" target="_blank">Academic theme</a> for <a href="http://gohugo.io" target="_blank">Hugo</a>.
 
