--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Test Site </title>
+  <title>ryoung.io </title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
@@ -19,8 +19,8 @@
 <link rel="author" href="http://plus.google.com/+Myprofile">
 
 
-<meta property="og:title" content="Test Site ">
-<meta property="og:site_name" content="Test Site"/>
+<meta property="og:title" content="ryoung.io ">
+<meta property="og:site_name" content="ryoung.io"/>
 <meta property="og:url" content="/" />
 <meta property="og:locale" content="en-EN">
 
@@ -29,7 +29,7 @@
 
 
 
-<link href="/index.xml" rel="alternate" type="application/rss+xml" title="Test Site" />
+<link href="/index.xml" rel="alternate" type="application/rss+xml" title="ryoung.io" />
 
 <link rel="canonical" href="/" />
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/touch-icon-144-precomposed.png">
