--- a/topics/index.html
+++ b/topics/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Topics  &middot; Test Site</title>
+  <title>Topics  &middot; ryoung.io</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
@@ -19,8 +19,8 @@
 <link rel="author" href="http://plus.google.com/+Myprofile">
 
 
-<meta property="og:title" content="Topics  &middot; Test Site ">
-<meta property="og:site_name" content="Test Site"/>
+<meta property="og:title" content="Topics  &middot; ryoung.io ">
+<meta property="og:site_name" content="ryoung.io"/>
 <meta property="og:url" content="/topics/" />
 <meta property="og:locale" content="en-EN">
 
