--- a/sheets/index.html
+++ b/sheets/index.html
@@ -1,4 +1,6 @@
 <ul>
 <li><a href="https://docs.google.com/spreadsheets/d/1vxJTD9-9YZ8-VODHDMfxvj1FWj5idC18NI-GB4OAbSM/edit?usp=sharing">Aleous</a></li>
 <li><a href="ruxin.por">Rodney Ruxin</a></li>
+<li><a href="Kayhl.por">Kayhl - Hero Lab</a></li>
+<li><a href="Kayhl.por">Kayhl - PDF</a></li>
 </ul>
