--- a/list/index.html
+++ b/list/index.html
@@ -1,3 +1,5 @@
-<script>
-window.location = 'http://a.co/4rwV4oC';
-</script>
+<ul>
+    <li><a href="./amazon.html">Amazon List</a></li>
+    <li><a href="http://www.ft86speedfactory.com/raceseng-lock-out-lever.html">Black Reverse Lockout</a></li>
+    <li><a href="http://www.ft86speedfactory.com/raceseng-ashiko-metallic-shift-knob-2013-ft86.html">Metalic Black Shift Knob</a></li>
+</ul>
