--- a/list/index.html
+++ b/list/index.html
@@ -2,4 +2,6 @@
     <li><a href="./amazon.html">Amazon List</a></li>
     <li><a href="http://www.ft86speedfactory.com/raceseng-lock-out-lever.html">Black Reverse Lockout</a></li>
     <li><a href="http://www.ft86speedfactory.com/raceseng-ashiko-metallic-shift-knob-2013-ft86.html">Metalic Black Shift Knob</a></li>
+    <li><a href="http://www.ft86speedfactory.com/mtec-clutch-spring-1839.html">Clutch Spring</a></li>
+    <li><a href="http://www.ft86speedfactory.com/mtec-shift-spring-kit.html">Shift Spring</a></li>
 </ul>
