--- a/list/index.html
+++ b/list/index.html
@@ -4,4 +4,5 @@
     <li><a href="http://www.ft86speedfactory.com/raceseng-ashiko-metallic-shift-knob-2013-ft86.html">Metalic Black Shift Knob</a></li>
     <li><a href="http://www.ft86speedfactory.com/mtec-clutch-spring-1839.html">Clutch Spring</a></li>
     <li><a href="http://www.ft86speedfactory.com/mtec-shift-spring-kit.html">Shift Spring</a></li>
+    <li><a href="https://store.google.com/us/config/google_home_mini?hl=en-US">Google Home Mini</a></li>
 </ul>
