--- a/list/index.html
+++ b/list/index.html
@@ -5,4 +5,7 @@
     <li><a href="http://www.ft86speedfactory.com/mtec-clutch-spring-1839.html">Clutch Spring</a></li>
     <li><a href="http://www.ft86speedfactory.com/mtec-shift-spring-kit.html">Shift Spring</a></li>
     <li><a href="https://store.google.com/us/config/google_home_mini?hl=en-US">Google Home Mini</a></li>
+    <li><a href="http://www.ft86speedfactory.com/helix-frs-brz-smoke-side-markers.html">Side Markers</a></li>
+    <li><a href="http://www.ft86speedfactory.com/grimmspeed-hella-supertone-horn-wiring-harness-2015-wrx-2015-sti-2013-ft86.html">Horn wiring harness</a></li>
+    <li><a href="http://www.ft86speedfactory.com/hella-supertone-horn-kit-2015-wrx-2015-sti-2013-ft86.html">Black or White Horn</a></li>
 </ul>
