--- a/list/index.html
+++ b/list/index.html
@@ -8,4 +8,9 @@
     <li><a href="http://www.ft86speedfactory.com/helix-frs-brz-smoke-side-markers.html">Side Markers</a></li>
     <li><a href="http://www.ft86speedfactory.com/grimmspeed-hella-supertone-horn-wiring-harness-2015-wrx-2015-sti-2013-ft86.html">Horn wiring harness</a></li>
     <li><a href="http://www.ft86speedfactory.com/hella-supertone-horn-kit-2015-wrx-2015-sti-2013-ft86.html">Black or White Horn</a></li>
+    <li><a href="http://www.ft86speedfactory.com/greddy-magnetic-oil-drain-plug.html">Magnetic oil drain plug</a></li>
+    <li><a href="http://www.ft86speedfactory.com/index.php/catalog/product/view/id/13009">Blackvue 2 Channel dashcam + Fuse w/ Fuse</a></li>
+    <li><a href="http://www.ft86speedfactory.com/subaru-license-plate-frame-in-black-2015-wrx-2015-sti-2013-brz.html">License Plate Frame</a></li>
+    <li><a href="http://www.ft86speedfactory.com/subaru-oem-severe-weather-kit.html">OEM Severe Weather Kit</a></li>
+    <li><a href="http://www.ft86speedfactory.com/subaru-floor-mat-coaster-set.html">Coaster</a></li>
 </ul>
