--- a/timeline2/index.html
+++ b/timeline2/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/classlist/1.2.20171210/classList.min.js"></script>
-    <script src="../dist/timeline.js"></script>
-    <link rel="stylesheet" href="../dist/timeline.css" />
+    <script src="./dist/timeline.js"></script>
+    <link rel="stylesheet" href="./dist/timeline.css" />
     <link rel="stylesheet" href="css.css" />
   </head>
 
