--- a/list/amazon.html
+++ b/list/amazon.html
@@ -1,3 +1,3 @@
 <script>
-window.location = 'http://a.co/4rwV4oC';
+window.location = 'https://www.amazon.com/hz/wishlist/ls/383YJ141HL5EX?ref_=wl_share';
 </script>
